crates/compiler/tests/parse_errors/unfinished_let.elm
module Main exposing (..)
x = let
